[project]
name = "doccombo"
version = "0.1.0"
description = "Command line document combiner tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.24.10",
]

[project.scripts]
doccombo = "doccombo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
