[project]
name = "doccombo"
version = "0.1.0"
description = "Command line document combiner tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.24.10",
]

[project.scripts]
doccombo = "doccombo.__main__:main"

[project.optional-dependencies]
server = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
